--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             </li>
           </ul>
         </nav>
+
         <ul class="header-login-btns">
           <li class="header-login-btns-item">
             <button class="sign-in-btn" type="button">Sign In</button>
@@ -57,10 +58,16 @@
             <button class="black-mode-btn" type="button">BM</button>
           </li>
         </ul>
+
+        <button class="mobile-menu-btn" type="button">
+          <svg class="mobile-menu-icon" width="28" height="31">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
-      <!-- HERO DECTION -->
+      <!-- HERO SECTION -->
       <section class="hero-section"></section>
     </main>
     <footer></footer>
