--- a/index.html
+++ b/index.html
@@ -66,9 +66,38 @@
         </button>
       </div>
     </header>
+
     <main>
       <!-- HERO SECTION -->
-      <section class="hero-section"></section>
+      <section class="hero-section">
+        <div class="container">
+          <img
+            src="./images/hero-image.svg"
+            alt="Workers in the office"
+            class="hero-img"
+            width="338"
+            height="310"
+          />
+          <h1 class="hero-title">Work at the speed of thought</h1>
+          <p class="hero-text">
+            Tools, tutorials, design and innovation experts, all in one place!
+            The most intuitive way to imagine your next user experience.
+          </p>
+          <ul class="hero-btn-list">
+            <li class="hero-btn-list-item">
+              <button type="button" class="get-started-btn">Get started</button>
+            </li>
+            <li class="hero-btn-list-item">
+              <button type="button" class="watch-video-btn">
+                <svg width="20" height="17" class="watch-video-icon">
+                  <use href="./images/icons.svg#icon-play"></use>
+                </svg>
+                Watch the Video
+              </button>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
