add product section markup

--- a/index.html
+++ b/index.html
@@ -98,6 +98,54 @@
           </ul>
         </div>
       </section>
+
+      <!-- PRODUCT LIST -->
+      <section class="section-paddings">
+        <div class="container">
+          <h2 class="product-list-main-title">
+            Product was Built Specifically for You
+          </h2>
+          <ul class="product-list">
+            <li class="product-item">
+              <svg width="50" height="50" class="product-icon">
+                <use href="./images/icons.svg#icon-cursor"></use>
+              </svg>
+              <h3 class="product-title">First click tests</h3>
+              <p class="product-text">
+                While most people enjoy casino gambling,
+              </p>
+            </li>
+            <li class="product-item">
+              <svg width="50" height="50" class="product-icon">
+                <use href="./images/icons.svg#icon-design"></use>
+              </svg>
+              <h3 class="product-title">Design surveys</h3>
+              <p class="product-text">
+                Sports betting, lottery and bingo playing for the fun
+              </p>
+            </li>
+            <li class="product-item">
+              <svg width="50" height="50" class="product-icon">
+                <use href="./images/icons.svg#icon-heart"></use>
+              </svg>
+              <h3 class="product-title">Preference tests</h3>
+              <p class="product-text">
+                The Myspace page defines the individual.
+              </p>
+            </li>
+            <li class="product-item">
+              <svg width="50" height="50" class="product-icon">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
+              <h3 class="product-title">Five second tests</h3>
+              <p class="product-text">
+                Personal choices and the overall personality of the person.
+              </p>
+            </li>
+          </ul>
+          <button type="button" class="product-button">SIGN UP NOW</button>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
