add product styles

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               </p>
             </li>
           </ul>
-          <button type="button" class="product-button">SIGN UP NOW</button>
+          <button type="button" class="product-btn">SIGN UP NOW</button>
         </div>
       </section>
     </main>
