add benefits section markup

--- a/index.html
+++ b/index.html
@@ -146,6 +146,123 @@
           <button type="button" class="product-btn">SIGN UP NOW</button>
         </div>
       </section>
+
+      <!-- BENEFITS SECTION -->
+      <section class="section-paddings">
+        <div class="container">
+          <h2 class="visually-hidden">benefits</h2>
+          <ul class="benefits-list">
+            <li class="benefits-item">
+              <img
+                src="./images/management.svg"
+                alt="Documents on the table"
+                width="350"
+                height="306"
+                class="benefits-img"
+              />
+              <h3 class="benefits-title">
+                Effortless Validation for Management
+              </h3>
+              <p class="benefits-text">
+                The Myspace page defines the individual, his or her
+                characteristics, traits, personal choices and the overall
+                personality of the person.
+              </p>
+              <ul class="management-list">
+                <li class="management-item">
+                  <h4 class="management-title">Accessory makers</h4>
+                  <p class="management-text">
+                    While most people enjoy casino gambling, sports betting,
+                    lottery and bingo playing for the fun
+                  </p>
+                </li>
+                <li class="management-item">
+                  <h4 class="management-title">Alterationists</h4>
+                  <p class="management-text">
+                    If you are looking for a new way to promote your business
+                    that won&#8217;t cost you more money
+                  </p>
+                </li>
+              </ul>
+            </li>
+            <li class="benefits-item">
+              <img
+                src="./images/support.svg"
+                alt="Laptop image"
+                width="350"
+                height="306"
+                class="benefits-img"
+              />
+              <h3 class="benefits-title">
+                Easier decision making for Customer Support
+              </h3>
+              <p class="benefits-text">
+                The Myspace page defines the individual, his or her
+                characteristics, traits, personal choices and the overall
+                personality of the person.
+              </p>
+              <ul class="support-list">
+                <li class="support-item">
+                  <svg width="35" height="35" class="support-icon">
+                    <use href="./images/icons.svg#icon-orange-checked"></use>
+                  </svg>
+                  <p class="support-text">
+                    Never worry about overpaying for your energy again.
+                  </p>
+                </li>
+                <li class="support-item">
+                  <svg width="35" height="35" class="support-icon">
+                    <use href="./images/icons.svg#icon-red-checked"></use>
+                  </svg>
+                  <p class="support-text">
+                    We will only switch you to energy companies that we trust
+                    and will treat you right
+                  </p>
+                </li>
+                <li class="support-item">
+                  <svg width="35" height="35" class="support-icon">
+                    <use href="./images/icons.svg#icon-blue-checked"></use>
+                  </svg>
+                  <p class="support-text">
+                    We track the markets daily and know where the savings are.
+                  </p>
+                </li>
+              </ul>
+            </li>
+            <li class="benefits-item">
+              <img
+                src="./images/collaboration.svg"
+                alt="Card list"
+                width="350"
+                height="306"
+                class="benefits-img"
+              />
+              <h3 class="benefits-title">Optimisation for Collaborative</h3>
+              <p class="benefits-text">
+                Few would argue that, despite the advancements of feminism over
+                the past three decades, women still face a double standard when
+                it comes to their behavior.
+              </p>
+              <ul class="collaboration-list">
+                <li class="collaboration-item">
+                  <h4 class="collaboration-title">Accessory makers</h4>
+                  <p class="collaboration-text">
+                    While most people enjoy casino gambling, sports betting,
+                    lottery and bingo playing for the fun
+                  </p>
+                </li>
+                <li class="collaboration-item">
+                  <h4 class="collaboration-title">Alterationists</h4>
+                  <p class="collaboration-text">
+                    If you are looking for a new way to promote your business
+                    that won&#8217;t cost you more money,
+                  </p>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
