add benefits styles

--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
                 class="benefits-img"
               />
               <h3 class="benefits-title">
-                Effortless Validation for Management
+                Effortless Validation for
+                <span class="benefits-big-title">Management</span>
               </h3>
               <p class="benefits-text">
                 The Myspace page defines the individual, his or her
@@ -194,7 +195,8 @@
                 class="benefits-img"
               />
               <h3 class="benefits-title">
-                Easier decision making for Customer Support
+                Easier decision making for
+                <span class="benefits-big-title">Customer Support</span>
               </h3>
               <p class="benefits-text">
                 The Myspace page defines the individual, his or her
@@ -237,7 +239,10 @@
                 height="306"
                 class="benefits-img"
               />
-              <h3 class="benefits-title">Optimisation for Collaborative</h3>
+              <h3 class="benefits-title">
+                Optimisation for
+                <span class="benefits-big-title">Collaborative</span>
+              </h3>
               <p class="benefits-text">
                 Few would argue that, despite the advancements of feminism over
                 the past three decades, women still face a double standard when
