add process styles

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
         </div>
       </section>
 
-      <!-- PRODUCT LIST -->
+      <!-- PRODUCT LIST SECTION -->
       <section class="section-paddings">
         <div class="container">
-          <h2 class="product-list-main-title">
+          <h2 class="section-title product-main-title">
             Product was Built Specifically for You
           </h2>
           <ul class="product-list">
@@ -248,17 +248,17 @@
                 the past three decades, women still face a double standard when
                 it comes to their behavior.
               </p>
-              <ul class="collaboration-list">
-                <li class="collaboration-item">
-                  <h4 class="collaboration-title">Accessory makers</h4>
-                  <p class="collaboration-text">
+              <ul class="management-list">
+                <li class="management-item">
+                  <h4 class="management-title">Accessory makers</h4>
+                  <p class="management-text">
                     While most people enjoy casino gambling, sports betting,
                     lottery and bingo playing for the fun
                   </p>
                 </li>
-                <li class="collaboration-item">
-                  <h4 class="collaboration-title">Alterationists</h4>
-                  <p class="collaboration-text">
+                <li class="management-item">
+                  <h4 class="management-title">Alterationists</h4>
+                  <p class="management-text">
                     If you are looking for a new way to promote your business
                     that won&#8217;t cost you more money,
                   </p>
@@ -266,6 +266,60 @@
               </ul>
             </li>
           </ul>
+        </div>
+      </section>
+
+      <!-- PROCESS SECTION -->`
+      <section class="section-paddings">
+        <div class="container">
+          <h2 class="section-title process-main-title">Quick & Easy Process</h2>
+          <p class="process-main-text">
+            Do you require some help for your project: Conception workshop,
+            prototyping, marketing strategy, landing page, Ux/UI?
+          </p>
+          <ul class="process-list">
+            <li class="process-item">
+              <img
+                src="./images/process/Avator1.png"
+                alt="Avatar 1"
+                class="process-img"
+                width="90"
+                height="90"
+              />
+              <p class="process-text">I can take care of your pitch</p>
+            </li>
+            <li class="process-item">
+              <p class="process-text">I can design you website</p>
+              <img
+                src="./images/process/Avator2.png"
+                alt="Avatar 2"
+                class="process-img"
+                width="90"
+                height="90"
+              />
+            </li>
+            <li class="process-item">
+              <img
+                src="./images/process/Avator3.png"
+                alt="Avatar 3"
+                class="process-img"
+                width="90"
+                height="90"
+              />
+              <p class="process-text">I can help marketing strategy</p>
+            </li>
+            <li class="process-item">
+              <p class="process-text">I can prototype your app</p>
+              <img
+                src="./images/process/Avator4.png"
+                alt="Avatar 4"
+                class="process-img"
+                width="90"
+                height="90"
+              />
+            </li>
+          </ul>
+          <button type="button" class="process-btn">Contact our expert</button>
         </div>
       </section>
     </main>
