add strategies styles

--- a/index.html
+++ b/index.html
@@ -322,6 +322,69 @@
           <button type="button" class="process-btn">Contact our expert</button>
         </div>
       </section>
+
+      <!-- STRATEGIES SECTION -->
+      <section class="section-paddings">
+        <div class="container">
+          <h2 class="section-title strategies-main-title">
+            Contents Strategies
+          </h2>
+          <p class="strategies-main-text">
+            We focus on ergonomics and meeting you where you work. It's only a
+            keystroke away.
+          </p>
+          <ul class="strategies-list">
+            <li class="strategies-item">
+              <img
+                src="./images/strategies/strategies1.png"
+                alt="People at laptops"
+                width="348"
+                height="185"
+                class="strategies-img"
+              />
+              <p class="img-caption">
+                By <span class="img-caption-bold">Wahid Ari</span> | 03 March
+                2019
+              </p>
+              <h3 class="strategies-title">
+                Increasing Prosperity With Positive Thinking
+              </h3>
+            </li>
+            <li class="strategies-item">
+              <img
+                src="./images/strategies/strategies2.png"
+                alt="Big office"
+                width="348"
+                height="185"
+                class="strategies-img"
+              />
+              <p class="img-caption">
+                By <span class="img-caption-bold">Wahid Ari</span> | 03 March
+                2019
+              </p>
+              <h3 class="strategies-title green-title">
+                Motivation Is The First Step To Success
+              </h3>
+            </li>
+            <li class="strategies-item">
+              <img
+                src="./images/strategies/strategies3.png"
+                alt="Buldings"
+                width="348"
+                height="185"
+                class="strategies-img"
+              />
+              <p class="img-caption">
+                By <span class="img-caption-bold">Wahid Ari</span> | 03 March
+                2019
+              </p>
+              <h3 class="strategies-title">
+                Success Steps For Your Personal Or Business
+              </h3>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
