--- a/index.html
+++ b/index.html
@@ -385,6 +385,49 @@
           </ul>
         </div>
       </section>
+
+      <!-- PRICE SECTION -->
+      <section class="section-paddings">
+        <div class="container">
+          <h2 class="section-title strategies-main-title">Price Table</h2>
+          <p class="price-main-text">We offer competitive price</p>
+          <ul class="price-list">
+            <li>
+              <h3>Free</h3>
+              <p>Brief price description</p>
+              <h4>0 $ Per / month</h4>
+              <ul>
+                <li>Only 2 Operators</li>
+                <li>Notifications</li>
+                <li>Landing Pages</li>
+              </ul>
+              <button type="button">Order Now</button>
+            </li>
+            <li>
+              <h3>Standard</h3>
+              <p>Brief price description</p>
+              <h4>5 $ Per / month</h4>
+              <ul>
+                <li>5+ Operators</li>
+                <li>Notifications</li>
+                <li>Landing Pages</li>
+              </ul>
+              <button type="button">Order Now</button>
+            </li>
+            <li>
+              <h3>Premium</h3>
+              <p>Brief price description</p>
+              <h4>10 $ Per / month</h4>
+              <ul>
+                <li>10+ Operators</li>
+                <li>Notifications</li>
+                <li>Landing Pages</li>
+              </ul>
+              <button type="button">Order Now</button>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
