add price styles

--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
             <button class="sign-up-btn" type="button">Sign Up</button>
           </li>
           <li class="header-login-btns-item">
-            <button class="black-mode-btn" type="button">BM</button>
+            <button class="black-mode-btn" type="button">
+              <svg width="32" height="32">
+                <use href="./images/icons.svg#icon-drk-mode-btn"></use>
+              </svg>
+            </button>
           </li>
         </ul>
 
@@ -392,38 +396,56 @@
           <h2 class="section-title strategies-main-title">Price Table</h2>
           <p class="price-main-text">We offer competitive price</p>
           <ul class="price-list">
-            <li>
-              <h3>Free</h3>
-              <p>Brief price description</p>
-              <h4>0 $ Per / month</h4>
-              <ul>
-                <li>Only 2 Operators</li>
-                <li>Notifications</li>
-                <li>Landing Pages</li>
+            <li class="price-item">
+              <h3 class="price-list-type-title">Free</h3>
+              <p class="price-list-type-text">Brief price description</p>
+              <h4 class="price-list-price-title">
+                <span class="price-color number-size">0</span>
+                <span class="price-type"
+                  ><span class="price-color price-currency">$</span>
+                  <span>Per / month</span></span
+                >
+              </h4>
+              <ul class="price-sub-list">
+                <li class="price-sub-item">Only 2 Operators</li>
+                <li class="price-sub-item">Notifications</li>
+                <li class="price-sub-item">Landing Pages</li>
               </ul>
-              <button type="button">Order Now</button>
+              <button class="price-btn" type="button">Order Now</button>
             </li>
-            <li>
-              <h3>Standard</h3>
-              <p>Brief price description</p>
-              <h4>5 $ Per / month</h4>
-              <ul>
-                <li>5+ Operators</li>
-                <li>Notifications</li>
-                <li>Landing Pages</li>
+            <li class="price-item">
+              <h3 class="price-list-type-title">Standard</h3>
+              <p class="price-list-type-text">Brief price description</p>
+              <h4 class="price-list-price-title">
+                <span class="price-color number-size">5</span>
+                <span class="price-type"
+                  ><span class="price-color price-currency">$</span>
+                  <span>Per / month</span></span
+                >
+              </h4>
+              <ul class="price-sub-list">
+                <li class="price-sub-item">5+ Operators</li>
+                <li class="price-sub-item">Notifications</li>
+                <li class="price-sub-item">Landing Pages</li>
               </ul>
-              <button type="button">Order Now</button>
+              <button class="price-btn" type="button">Order Now</button>
             </li>
-            <li>
-              <h3>Premium</h3>
-              <p>Brief price description</p>
-              <h4>10 $ Per / month</h4>
-              <ul>
-                <li>10+ Operators</li>
-                <li>Notifications</li>
-                <li>Landing Pages</li>
+            <li class="price-item">
+              <h3 class="price-list-type-title">Premium</h3>
+              <p class="price-list-type-text">Brief price description</p>
+              <h4 class="price-list-price-title">
+                <span class="price-color number-size">10</span>
+                <span class="price-type"
+                  ><span class="price-color price-currency">$</span>
+                  <span>Per / month</span></span
+                >
+              </h4>
+              <ul class="price-sub-list">
+                <li class="price-sub-item">10+ Operators</li>
+                <li class="price-sub-item">Notifications</li>
+                <li class="price-sub-item">Landing Pages</li>
               </ul>
-              <button type="button">Order Now</button>
+              <button class="price-btn" type="button">Order Now</button>
             </li>
           </ul>
         </div>
