--- a/index.html
+++ b/index.html
@@ -450,6 +450,82 @@
           </ul>
         </div>
       </section>
+
+      <!-- REVIEW SECTION -->
+      <section class="section-paddings">
+        <div class="container">
+          <h2 class="section-title">What Clients Say</h2>
+          <p class="review-text">
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanics
+          </p>
+          <ul class="review-list">
+            <li class="review-item">
+              <svg class="review-icon" width="106" height="18">
+                <use href="./images/icons.svg#icon-review-stars"></use>
+              </svg>
+              <p class="review-list-text">
+                Product helps you see how many more days you need to work to
+                reach your financial goal. Product helps you see how many more
+                days you need to work to reach your financial goal. Product
+                helps you see how many more days you need to work to reach your
+                financial goal.
+              </p>
+              <img
+                src="./images/review/designer.png"
+                alt=""
+                width="50"
+                height="50"
+                class="review-img"
+              />
+              <h3 class="review-name-title">Wahid Ari</h3>
+              <p class="review-name-text">Designer</p>
+            </li>
+            <li class="review-item">
+              <svg class="review-icon" width="106" height="18">
+                <use href="./images/icons.svg#icon-review-stars"></use>
+              </svg>
+              <p class="review-list-text">
+                Product helps you see how many more days you need to work to
+                reach your financial goal. Product helps you see how many more
+                days you need to work to reach your financial goal. Product
+                helps you see how many more days you need to work to reach your
+                financial goal.
+              </p>
+              <img
+                src="./images/review/frontend.png"
+                alt=""
+                width="50"
+                height="50"
+                class="review-img"
+              />
+              <h3 class="review-name-title">Wahid Ari</h3>
+              <p class="review-name-text">FrontEnd</p>
+            </li>
+            <li class="review-item">
+              <svg class="review-icon" width="106" height="18">
+                <use href="./images/icons.svg#icon-review-stars"></use>
+              </svg>
+              <p class="review-list-text">
+                Product helps you see how many more days you need to work to
+                reach your financial goal. Product helps you see how many more
+                days you need to work to reach your financial goal. Product
+                helps you see how many more days you need to work to reach your
+                financial goal.
+              </p>
+              <img
+                src="./images/review/analys.png"
+                alt=""
+                width="50"
+                height="50"
+                class="review-img"
+              />
+              <h3 class="review-name-title">Wahid Ari</h3>
+              <p class="review-name-text">Analys</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
