--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
       <!-- REVIEW SECTION -->
       <section class="section-paddings">
         <div class="container">
-          <h2 class="section-title">What Clients Say</h2>
+          <h2 class="section-title review-title">What Clients Say</h2>
           <p class="review-text">
             Problems trying to resolve the conflict between the two major realms
             of Classical physics: Newtonian mechanics
@@ -466,20 +466,21 @@
               </svg>
               <p class="review-list-text">
                 Product helps you see how many more days you need to work to
-                reach your financial goal. Product helps you see how many more
-                days you need to work to reach your financial goal. Product
-                helps you see how many more days you need to work to reach your
-                financial goal.
+                reach your financial goal.
               </p>
-              <img
-                src="./images/review/designer.png"
-                alt=""
-                width="50"
-                height="50"
-                class="review-img"
-              />
-              <h3 class="review-name-title">Wahid Ari</h3>
-              <p class="review-name-text">Designer</p>
+              <div class="review-name-container">
+                <img
+                  src="./images/review/designer.png"
+                  alt=""
+                  width="50"
+                  height="50"
+                  class="review-img"
+                />
+                <div>
+                  <h3 class="review-name-title">Wahid Ari</h3>
+                  <p class="review-name-text">Designer</p>
+                </div>
+              </div>
             </li>
             <li class="review-item">
               <svg class="review-icon" width="106" height="18">
@@ -487,20 +488,21 @@
               </svg>
               <p class="review-list-text">
                 Product helps you see how many more days you need to work to
-                reach your financial goal. Product helps you see how many more
-                days you need to work to reach your financial goal. Product
-                helps you see how many more days you need to work to reach your
-                financial goal.
+                reach your financial goal.
               </p>
-              <img
-                src="./images/review/frontend.png"
-                alt=""
-                width="50"
-                height="50"
-                class="review-img"
-              />
-              <h3 class="review-name-title">Wahid Ari</h3>
-              <p class="review-name-text">FrontEnd</p>
+              <div class="review-name-container">
+                <img
+                  src="./images/review/frontend.png"
+                  alt=""
+                  width="50"
+                  height="50"
+                  class="review-img"
+                />
+                <div>
+                  <h3 class="review-name-title">Wahid Ari</h3>
+                  <p class="review-name-text">FrontEnd</p>
+                </div>
+              </div>
             </li>
             <li class="review-item">
               <svg class="review-icon" width="106" height="18">
@@ -508,20 +510,21 @@
               </svg>
               <p class="review-list-text">
                 Product helps you see how many more days you need to work to
-                reach your financial goal. Product helps you see how many more
-                days you need to work to reach your financial goal. Product
-                helps you see how many more days you need to work to reach your
-                financial goal.
+                reach your financial goal.
               </p>
-              <img
-                src="./images/review/analys.png"
-                alt=""
-                width="50"
-                height="50"
-                class="review-img"
-              />
-              <h3 class="review-name-title">Wahid Ari</h3>
-              <p class="review-name-text">Analys</p>
+              <div class="review-name-container">
+                <img
+                  src="./images/review/analys.png"
+                  alt=""
+                  width="50"
+                  height="50"
+                  class="review-img"
+                />
+                <div>
+                  <h3 class="review-name-title">Wahid Ari</h3>
+                  <p class="review-name-text">Analys</p>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
