add footer styles

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <header class="page-header">
       <div class="container">
         <nav class="menu">
-          <a href="./index.html" class="page-logo"
-            ><svg width="40" height="36" class="page-logo-icon">
+          <a href="./index.html" class="header-logo"
+            ><svg width="40" height="36" class="header-logo-icon">
               <use href="./images/icons.svg#icon-logo"></use></svg
             >Product</a
           >
@@ -529,7 +529,99 @@
           </ul>
         </div>
       </section>
+
+      <!-- JOIN SECTION -->
+      <section class="section-paddings">
+        <div class="container join-container">
+          <h2 class="section-title join-title">
+            Join 100 Compannies who boost their business with Product
+          </h2>
+          <button class="join-btn" type="button">Get This</button>
+          <img
+            src="./images/join.svg"
+            alt="Screen app"
+            width="351"
+            height="331"
+            class="join-img"
+          />
+        </div>
+      </section>
     </main>
-    <footer></footer>
+
+    <footer class="section-paddings">
+      <div class="container">
+        <a href="./index.html" class="footer-logo"
+          ><svg width="32" height="30" class="footer-logo-icon">
+            <use href="./images/icons.svg#icon-logo"></use>
+          </svg>
+          <img srcset="./images/footer-logo.png" width="115" height="22" />
+        </a>
+        <ul class="footer-sm-list">
+          <li>
+            <a
+              class="footer-sm-link"
+              href="https://www.instagram.com/"
+              target="_blank"
+            >
+              <svg class="footer-sm-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a
+              class="footer-sm-link"
+              href="https://www.facebook.com/"
+              target="_blank"
+            >
+              <svg class="footer-sm-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="footer-sm-link" href="https://x.com/" target="_blank">
+              <svg class="footer-sm-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <ul class="footer-menu-list">
+          <li>
+            <h2 class="footer-menu-title">Resource</h2>
+            <ul>
+              <li><a class="footer-menu-link" href="">About Us</a></li>
+              <li><a class="footer-menu-link" href="">Blog</a></li>
+              <li><a class="footer-menu-link" href="">Contact</a></li>
+              <li><a class="footer-menu-link" href="">FAQ</a></li>
+            </ul>
+          </li>
+          <li>
+            <h2 class="footer-menu-title">Legal Stuff</h2>
+            <ul>
+              <li><a class="footer-menu-link" href="">Disclaimer</a></li>
+              <li><a class="footer-menu-link" href="">Financing</a></li>
+              <li><a class="footer-menu-link" href="">Privacy Policy</a></li>
+              <li><a class="footer-menu-link" href="">Terms of Service</a></li>
+            </ul>
+          </li>
+        </ul>
+        <form action="" name="footer-form">
+          <label for="email" class="footer-label"
+            >knowing you're always on the best energy deal.
+          </label>
+          <input
+            type="email"
+            id="email"
+            required
+            placeholder="Enter e-mail"
+            class="footer-input"
+          />
+          <button type="submit" class="footer-submit-btn">Sign up Now</button>
+        </form>
+        <p class="footer-text">Made With Love By Product All Right Reserved</p>
+      </div>
+    </footer>
   </body>
 </html>
