add header desktop styles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <!-- HEADER PAGE -->
     <header class="page-header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="menu">
           <a href="./index.html" class="header-logo"
             ><svg width="40" height="36" class="header-logo-icon">
@@ -35,7 +35,7 @@
           >
           <ul class="menu-list">
             <li class="menu-item">
-              <a class="menu-link" href="./index.html">Product</a>
+              <a class="menu-link current" href="./index.html">Product</a>
             </li>
             <li class="menu-item"><a class="menu-link" href="">Pricing</a></li>
             <li class="menu-item">
@@ -49,10 +49,10 @@
 
         <ul class="header-login-btns">
           <li class="header-login-btns-item">
-            <button class="sign-in-btn" type="button">Sign In</button>
+            <button class="sign-btn" type="button">Sign In</button>
           </li>
           <li class="header-login-btns-item">
-            <button class="sign-up-btn" type="button">Sign Up</button>
+            <button class="sign-btn" type="button">Sign Up</button>
           </li>
           <li class="header-login-btns-item">
             <button class="black-mode-btn" type="button">
