add process section styles

--- a/index.html
+++ b/index.html
@@ -74,32 +74,36 @@
     <main>
       <!-- HERO SECTION -->
       <section class="hero-section">
-        <div class="container">
+        <div class="container hero-wrap">
           <img
+            class="hero-img"
             src="./images/hero-image.svg"
             alt="Workers in the office"
-            class="hero-img"
             width="338"
             height="310"
           />
-          <h1 class="hero-title">Work at the speed of thought</h1>
-          <p class="hero-text">
-            Tools, tutorials, design and innovation experts, all in one place!
-            The most intuitive way to imagine your next user experience.
-          </p>
-          <ul class="hero-btn-list">
-            <li class="hero-btn-list-item">
-              <button type="button" class="get-started-btn">Get started</button>
-            </li>
-            <li class="hero-btn-list-item">
-              <button type="button" class="watch-video-btn">
-                <svg width="20" height="17" class="watch-video-icon">
-                  <use href="./images/icons.svg#icon-play"></use>
-                </svg>
-                Watch the Video
-              </button>
-            </li>
-          </ul>
+          <div class="hero-descr">
+            <h1 class="hero-title">Work at the speed of thought</h1>
+            <p class="hero-text">
+              Tools, tutorials, design and innovation experts, all in one place!
+              The most intuitive way to imagine your next user experience.
+            </p>
+            <ul class="hero-btn-list">
+              <li class="hero-btn-list-item">
+                <button type="button" class="get-started-btn">
+                  Get started
+                </button>
+              </li>
+              <li class="hero-btn-list-item">
+                <button type="button" class="watch-video-btn">
+                  <svg width="20" height="17" class="watch-video-icon">
+                    <use href="./images/icons.svg#icon-play"></use>
+                  </svg>
+                  Watch the Video
+                </button>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
@@ -111,36 +115,24 @@
           </h2>
           <ul class="product-list">
             <li class="product-item">
-              <svg width="50" height="50" class="product-icon">
-                <use href="./images/icons.svg#icon-cursor"></use>
-              </svg>
               <h3 class="product-title">First click tests</h3>
               <p class="product-text">
                 While most people enjoy casino gambling,
               </p>
             </li>
             <li class="product-item">
-              <svg width="50" height="50" class="product-icon">
-                <use href="./images/icons.svg#icon-design"></use>
-              </svg>
               <h3 class="product-title">Design surveys</h3>
               <p class="product-text">
                 Sports betting, lottery and bingo playing for the fun
               </p>
             </li>
             <li class="product-item">
-              <svg width="50" height="50" class="product-icon">
-                <use href="./images/icons.svg#icon-heart"></use>
-              </svg>
               <h3 class="product-title">Preference tests</h3>
               <p class="product-text">
                 The Myspace page defines the individual.
               </p>
             </li>
             <li class="product-item">
-              <svg width="50" height="50" class="product-icon">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
               <h3 class="product-title">Five second tests</h3>
               <p class="product-text">
                 Personal choices and the overall personality of the person.
@@ -158,116 +150,113 @@
           <ul class="benefits-list">
             <li class="benefits-item">
               <img
+                class="benefits-img"
                 src="./images/management.svg"
                 alt="Documents on the table"
                 width="350"
                 height="306"
-                class="benefits-img"
               />
-              <h3 class="benefits-title">
-                Effortless Validation for
-                <span class="benefits-big-title">Management</span>
-              </h3>
-              <p class="benefits-text">
-                The Myspace page defines the individual, his or her
-                characteristics, traits, personal choices and the overall
-                personality of the person.
-              </p>
-              <ul class="management-list">
-                <li class="management-item">
-                  <h4 class="management-title">Accessory makers</h4>
-                  <p class="management-text">
-                    While most people enjoy casino gambling, sports betting,
-                    lottery and bingo playing for the fun
-                  </p>
-                </li>
-                <li class="management-item">
-                  <h4 class="management-title">Alterationists</h4>
-                  <p class="management-text">
-                    If you are looking for a new way to promote your business
-                    that won&#8217;t cost you more money
-                  </p>
-                </li>
-              </ul>
+              <div class="benefits-item-wrap">
+                <h3 class="benefits-title">
+                  Effortless Validation for
+                  <span class="benefits-big-title">Management</span>
+                </h3>
+                <p class="benefits-text">
+                  The Myspace page defines the individual, his or her
+                  characteristics, traits, personal choices and the overall
+                  personality of the person.
+                </p>
+                <ul class="management-list">
+                  <li class="management-item">
+                    <h4 class="management-title">Accessory makers</h4>
+                    <p class="management-text">
+                      While most people enjoy casino gambling, sports betting,
+                      lottery and bingo playing for the fun
+                    </p>
+                  </li>
+                  <li class="management-item">
+                    <h4 class="management-title">Alterationists</h4>
+                    <p class="management-text">
+                      If you are looking for a new way to promote your business
+                      that won&#8217;t cost you more money
+                    </p>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="benefits-item">
               <img
+                class="benefits-img support-img"
                 src="./images/support.svg"
                 alt="Laptop image"
                 width="350"
                 height="306"
-                class="benefits-img"
               />
-              <h3 class="benefits-title">
-                Easier decision making for
-                <span class="benefits-big-title">Customer Support</span>
-              </h3>
-              <p class="benefits-text">
-                The Myspace page defines the individual, his or her
-                characteristics, traits, personal choices and the overall
-                personality of the person.
-              </p>
-              <ul class="support-list">
-                <li class="support-item">
-                  <svg width="35" height="35" class="support-icon">
-                    <use href="./images/icons.svg#icon-orange-checked"></use>
-                  </svg>
-                  <p class="support-text">
-                    Never worry about overpaying for your energy again.
-                  </p>
-                </li>
-                <li class="support-item">
-                  <svg width="35" height="35" class="support-icon">
-                    <use href="./images/icons.svg#icon-red-checked"></use>
-                  </svg>
-                  <p class="support-text">
-                    We will only switch you to energy companies that we trust
-                    and will treat you right
-                  </p>
-                </li>
-                <li class="support-item">
-                  <svg width="35" height="35" class="support-icon">
-                    <use href="./images/icons.svg#icon-blue-checked"></use>
-                  </svg>
-                  <p class="support-text">
-                    We track the markets daily and know where the savings are.
-                  </p>
-                </li>
-              </ul>
+              <div class="benefits-item-wrap support-wrap">
+                <h3 class="benefits-title">
+                  Easier decision making for
+                  <span class="benefits-big-title">Customer Support</span>
+                </h3>
+                <p class="benefits-text">
+                  The Myspace page defines the individual, his or her
+                  characteristics, traits, personal choices and the overall
+                  personality of the person.
+                </p>
+                <ul class="support-list">
+                  <li class="support-item">
+                    <p class="support-text">
+                      Never worry about overpaying for your energy again.
+                    </p>
+                  </li>
+                  <li class="support-item">
+                    <p class="support-text">
+                      We will only switch you to energy companies that we trust
+                      and will treat you right
+                    </p>
+                  </li>
+                  <li class="support-item">
+                    <p class="support-text">
+                      We track the markets daily and know where the savings are.
+                    </p>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="benefits-item">
               <img
+                class="benefits-img"
                 src="./images/collaboration.svg"
                 alt="Card list"
                 width="350"
                 height="306"
-                class="benefits-img"
               />
-              <h3 class="benefits-title">
-                Optimisation for
-                <span class="benefits-big-title">Collaborative</span>
-              </h3>
-              <p class="benefits-text">
-                Few would argue that, despite the advancements of feminism over
-                the past three decades, women still face a double standard when
-                it comes to their behavior.
-              </p>
-              <ul class="management-list">
-                <li class="management-item">
-                  <h4 class="management-title">Accessory makers</h4>
-                  <p class="management-text">
-                    While most people enjoy casino gambling, sports betting,
-                    lottery and bingo playing for the fun
-                  </p>
-                </li>
-                <li class="management-item">
-                  <h4 class="management-title">Alterationists</h4>
-                  <p class="management-text">
-                    If you are looking for a new way to promote your business
-                    that won&#8217;t cost you more money,
-                  </p>
-                </li>
-              </ul>
+              <div class="benefits-item-wrap">
+                <h3 class="benefits-title">
+                  Optimisation for
+                  <span class="benefits-big-title">Collaborative</span>
+                </h3>
+                <p class="benefits-text">
+                  Few would argue that, despite the advancements of feminism
+                  over the past three decades, women still face a double
+                  standard when it comes to their behavior.
+                </p>
+                <ul class="management-list">
+                  <li class="management-item">
+                    <h4 class="management-title">Accessory makers</h4>
+                    <p class="management-text">
+                      While most people enjoy casino gambling, sports betting,
+                      lottery and bingo playing for the fun
+                    </p>
+                  </li>
+                  <li class="management-item">
+                    <h4 class="management-title">Alterationists</h4>
+                    <p class="management-text">
+                      If you are looking for a new way to promote your business
+                      that won&#8217;t cost you more money,
+                    </p>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -284,9 +273,9 @@
           <ul class="process-list">
             <li class="process-item">
               <img
+                class="process-img"
                 src="./images/process/Avator1.png"
                 alt="Avatar 1"
-                class="process-img"
                 width="90"
                 height="90"
               />
